--- a/pages/basketballBlog.html
+++ b/pages/basketballBlog.html
@@ -3,41 +3,43 @@
   <head>
     <meta charset="utf-8">
     <title>Basketball Blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../style/blogStyle.css">
   </head>
   <body>
-    <h1>Basketball Blog</h1>
-    <p>Go Back to <a href="../index.html">Homepage</a></p>
-    <h2>Trending in Basketball World</h2>
-    <img src="../img/basketball.jpg" alt="Basketball Image" width="30%">
-    <ol>
-      <li>
+    <h1 id="header">Basketball Blog</h1>
+    <p id="backLink">Go Back to <a href="../index.html">Homepage</a></p>
+    <h2 id="sub-heading">Trending in Basketball World 🧐</h2>
+    <img id="banner" src="../img/basketball.jpg" alt="Basketball Image" >
+    <ol id="main-list">
+      <li class="blog basketball">
           <h3>Blog 1 Title</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><a href="about:blank" target="_blank">Continue to Read...</a></p>
       </li>
-      <hr>
-      <li>
+
+      <li class="blog basketball">
           <h3>Blog 2 Title</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><a href="about:blank" target="_blank">Continue to Read...</a></p>
       </li>
-      <li>
+      <li class="blog basketball">
           <h3>Blog 3 Title</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><a href="about:blank" target="_blank">Continue to Read...</a></p>
       </li>
-      <hr>
-      <li>
+
+      <li class="blog basketball">
           <h3>Blog 4 Title</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><a href="about:blank" target="_blank">Continue to Read...</a></p>
       </li>
-      <li>
+      <li class="blog basketball">
           <h3>Blog 5 Title</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><a href="about:blank" target="_blank">Continue to Read...</a></p>
       </li>
-      <hr>
-      <li>
+
+      <li class="blog basketball">
           <h3>Blog 6 Title</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><a href="about:blank" target="_blank">Continue to Read...</a></p>
       </li>
     </ol>
-    <p><a href="#">⏪Older Post</a></p>
+    <p><a class="older-post" href="#">⏪ Older Post</a></p>
   </body>
 </html>
