--- a/subscribe/subscribe.html
+++ b/subscribe/subscribe.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8"> <!-- UTF-8 is human readable standard-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Webpage</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../style/style.css">
     </head>
     <body>
         This is the Subscription Page.
